--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="./src/favicon.ico">
     <title>React App</title>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?unknown=polyfill"></script>
   </head>
   <body>
     <div id="root"></div>
